# techinfII

Baza samochodow/: CMakeLists.txt  baza.c  baza.h  main.c
Kalkulator/: CMakeLists.txt  main.cpp  my_math.cpp  my_math.h
Swap/: CMakeLists.txt  main.cpp
Zmienne/: CMakeLists.txt  main.cpp
figury obiektowe/: CMakeLists.txt  Circle.cpp  Circle.h  Figure.cpp  Figure.h  Rectangle.cpp  Rectangle.h  main.cpp  square.cpp  square.h  triangle.cpp  triangle.h
github/: CMakeLists.txt  main.cpp
kalkulator(wywoływanie funkcji i git)/: CMakeLists.txt
kolejka/zajecia-main/: Stack.cpp  Stack.h  main.cpp
lista/: CMakeLists.txt  list.cpp  list.h  main.cpp
stack2/: CMakeLists.txt  main.cpp  stack.cpp  stack.h
tablica dwuwym podzial na fn/: CMakeLists.txt  array.txt  main.cpp  operations.cpp  operations.h
tablica jednowym podzial na fn/: CMakeLists.txt  array.txt  function.cpp  function.h  main.cpp
wywoływanie programów/: CMakeLists.txt  main.cpp
Łańcuchy/: main.cpp
